<resources>
    <string name="level_label">Level:</string>
    <string name="action_search">search</string>
    <string name="hint_main_search"><font size="14">Personas, shadow names, or skills</font></string>
    <string name="tab_name_info">Info</string>
    <string name="tab_name_elements">Elements</string>
    <string name="tab_name_skills">Skills</string>
    <string name="skill_strength">Strength</string>
    <string name="skill_magic">Magic</string>
    <string name="skill_endurance">Endurance</string>
    <string name="skill_agility">Agility</string>
    <string name="skill_luck">Luck</string>
    <string name="fusions">Fusions</string>

    <string name="to">To</string>
    <string name="from">from</string>
    <string name="persona_one">Persona One</string>
    <string name="persona_two">Persona Two</string>
    <string name="result">Result</string>
    <string name="expand_more">expand more</string>
    <string name="details_for">Details for</string>

    <string name="element_physical">Physical</string>
    <string name="element_gun">Gun</string>
    <string name="element_fire">Fire</string>
    <string name="element_ice">Ice</string>
    <string name="element_electric">Electric</string>
    <string name="element_wind">Wind</string>
    <string name="element_psy">Psy</string>
    <string name="element_nuclear">Nuclear</string>
    <string name="element_bless">Bless</string>
    <string name="element_curse">Curse</string>
    <string name="effect_weak">WEAK</string>
    <string name="effect_resist">RESIST</string>
    <string name="effect_null">NULL</string>
    <string name="effect_repel">REPEL</string>
    <string name="effect_drain">DRAIN</string>
    <string name="sort">Sort</string>
    <string name="sort_asc">Sort by name A-Z</string>
    <string name="sort_desc">Sort by name Z-A</string>
    <string name="sort_level_asc">Sort by Level 1–99</string>
    <string name="sort_level_desc">Sort by Level 99–1</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="stats">Stats</string>
    <string name="dlc_persona_owned">DLC Persona Owned</string>
    <string name="dlc_persona_pref_summary">Choose the DLC persona you own and would like to include in fusions</string>
    <string name="pref_rare_persona_title">Include rare personas in fusions</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_rare_persona_summary">Include rare persona in fusions (Note: Base level is used for rare persona)</string>
    <string name="pref_theme_summary">Choose theme for app, including Dark Mode</string>
    <string name="action_settings">Settings</string>

    <string name="rare_persona">Rare Persona</string>
    <string name="dlc_persona">DLC Persona</string>
    <string name="max_level">Max Level</string>
    <string name="min_level">Min Level</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="about_contact_me">Contact me if you have any feedback or find any bugs.</string>
    <string name="developed_by">Developed by</string>
    <string name="about_special_thanks">Special Thanks</string>
    <string name="about_icon_designer">App Icon Designer</string>
    <string name="version">Version</string>
    <string name="sort_arcana_asc">Sort by Arcana A-Z</string>
    <string name="sort_arcana_desc">Sort by Arcana Z-A</string>
    <string name="loading_data">Loading data…</string>
    <string name="persona_picture">Persona Picture</string>
    <string name="effect">Effect</string>
    <string name="element">Element</string>
    <string name="note">Note</string>
    <string name="cost">Cost</string>
    <string name="persona_skill">Persona Skill</string>
    <string name="advanced_fusion">Advanced Fusion</string>
    <string name="advanced_fusion_prompt">%s can be fused by acquiring all of the following personas:</string>
    <string name="personas_with_skill">Personas with this skill:</string>
    <string name="max_note">You can only fuse this persona after you max out the confidant rank.</string>
    <string name="skills_more_details">Click on a skill for more details.</string>
    <string name="also_known_as">Also known as</string>
    <string name="upload_db_prompt">This will send your database to the developer for debugging purposes. Are you sure?</string>
    <string name="upload_db">Upload Database</string>
    <string name="summary_upload_db">Uploads the persona database to developer for debugging.</string>
    <string name="instance_id">Instance ID</string>
    <string name="for_debugging">For Debugging</string>
    <string name="upload_too_soon_prompt">You must wait two minutes before requesting another upload.</string>
    <string name="upload_sent">Thanks, the upload was sent!</string>

    <!--updates-->
    <string name="update_20">DLC settings have been reset! Sorry for the inconvenience.\nClick the button below to update your settings.</string>
    <string name="privacy_prompt">I take your privacy seriously! The app uses your Advertising ID for analytics. Basically, it\'s used to help with bug fixing.\n\nPrivacy Policy:\n</string>
    <string name="privacy">Privacy!</string>

    <string name="theme_type_title_device_default">Device Default</string>
    <string name="theme_type_title_device_light">Light</string>
    <string name="theme_type_title_device_dark">Dark</string>

    <!-- Arcanas -->
    <string name="arcana_any">Any</string>
    <string name="arcana_fool">Fool</string>
    <string name="arcana_magician">Magician</string>
    <string name="arcana_priestess">Priestess</string>
    <string name="arcana_empress">Empress</string>
    <string name="arcana_emperor">Emperor</string>
    <string name="arcana_hierophant">Hierophant</string>
    <string name="arcana_lovers">Lovers</string>
    <string name="arcana_chariot">Chariot</string>
    <string name="arcana_justice">Justice</string>
    <string name="arcana_hermit">Hermit</string>
    <string name="arcana_fortune">Fortune</string>
    <string name="arcana_hanged_man">Hanged Man</string>
    <string name="arcana_death">Death</string>
    <string name="arcana_temperance">Temperance</string>
    <string name="arcana_devil">Devil</string>
    <string name="arcana_tower">Tower</string>
    <string name="arcana_moon">Moon</string>
    <string name="arcana_sun">Sun</string>
    <string name="arcana_judgement">Judgement</string>
    <string name="arcana_world">World</string>
    <string name="arcana_strength">Strength</string>
    <string name="arcana_faith">Faith</string>
    <string name="arcana_star">Star</string>
    <string name="arcana_consultant">Consultant</string>

    <string name="max_confidant">Max Confidant</string>

    <string name="currently_viewing">Viewing: %1$s</string>
    <string name="game_persona_5">Persona 5</string>
    <string name="game_royal">Persona 5 Royal</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_one_sub_header">Choose your game (can be changed any time).</string>
    <string name="Skip">SKIP</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="done">done</string>
    <string name="next">next</string>
    <string name="dlc_settings_hint">DLC settings available in settings (top right).</string>
    <string name="hint_fusion_search">Search fusions</string>

</resources>
