<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_key_theme"
        android:title="@string/pref_theme_title"
        android:summary="@string/pref_theme_summary"
        android:defaultValue="-1"
        android:entries="@array/themeTypeTitles"
        android:entryValues="@array/themeType"
        />

    <MultiSelectListPreference
        android:key="@string/pref_key_dlc"
        android:title="@string/dlc_persona_owned"
        android:summary="@string/dlc_persona_pref_summary"
        android:defaultValue="@array/emptyArray"
        />

    <Preference
        android:key="about"
        android:title="@string/about"
        android:icon="@drawable/ic_info">
        <intent android:action="com.persona5dex.activities.AboutActivity"/>
    </Preference>

</PreferenceScreen>