<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_item_group_sorting">
        <item
            android:title="@string/filter"
            android:id="@+id/action_filter"
            android:icon="@drawable/ic_action_filter_white"
            app:showAsAction="ifRoom"/>
        <item
            android:title="@string/sort"
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_action_sort"
            app:showAsAction="ifRoom"/>
    </group>

    <item
        android:title="@string/action_search"
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        />
</menu>