<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?pageBackground">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_theme"
        android:textAppearance="?textHeadline"
        app:layout_constraintBottom_toTopOf="@id/theme_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_system_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_type_title_device_default" />

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_type_title_device_light" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_type_title_device_dark" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_onboarding_done"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/onboarding_padding_bottom"
        android:text="@string/done"
        android:textColor="?defaultTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>