<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rechee.persona5calculator.activities.PersonaDetailActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/toolbar_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_name_info" />
            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_name_elements" />
            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_name_skills" />

        </android.support.design.widget.TabLayout>
    </android.support.v4.view.ViewPager>



</LinearLayout>
