<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:paddingBottom="10dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    tools:context="com.persona5dex.fragments.PersonaElementsFragment"
    android:background="?pageBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/PersonaStatsTheme"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewPhysicalLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_physical" />

                <TextView
                    android:id="@+id/textViewPhysicalStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewGunLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_gun" />

                <TextView
                    android:id="@+id/textViewGunStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewFireLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_fire" />

                <TextView
                    android:id="@+id/textViewFireStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewIceLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_ice" />

                <TextView
                    android:id="@+id/textViewIceStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewElectricLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_electric" />

                <TextView
                    android:id="@+id/textViewElectricStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewWindLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_wind" />

                <TextView
                    android:id="@+id/textViewWindStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewPsyLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_psy" />

                <TextView
                    android:id="@+id/textViewPsyStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewNuclearLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_nuclear" />

                <TextView
                    android:id="@+id/textViewNuclearStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewBlessLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_bless" />

                <TextView
                    android:id="@+id/textViewBlessStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>

            <include layout="@layout/grid_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewCurseLabel"
                    style="@style/PersonaStatsTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_curse" />

                <TextView
                    android:id="@+id/textViewCurseStat"
                    style="@style/PersonaStatsTextLabel.PersonaStatsTextValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

