<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?pageBackground"
    android:paddingBottom="@dimen/onboarding_padding_bottom">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_app_icon_fore"
        app:layout_constraintBottom_toTopOf="@id/onboarding_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/rowPadding"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?textHeadline"
        app:layout_constraintBottom_toTopOf="@id/onboarding_sub_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onboarding_sub_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/onboarding_copy_bottom_margin"
        android:gravity="center"
        android:text="@string/onboarding_one_sub_header"
        android:textAppearance="?textBody"
        app:layout_constraintBottom_toTopOf="@id/base_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/base_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_copy_bottom_margin"
        android:layout_marginBottom="@dimen/rowPadding"
        android:background="@drawable/btn_rounded_background"
        android:paddingLeft="@dimen/onboarding_btn_horizontal_padding"
        android:paddingRight="@dimen/onboarding_btn_horizontal_padding"
        android:text="@string/game_persona_5"
        app:backgroundTint="?colorAccent"
        app:layout_constraintBottom_toTopOf="@id/royal_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/royal_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_copy_bottom_margin"
        android:background="@drawable/royal_golden_btn_background"
        android:paddingLeft="@dimen/onboarding_btn_horizontal_padding"
        android:paddingRight="@dimen/onboarding_btn_horizontal_padding"
        android:text="@string/game_royal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/base_game_button"
        app:layout_constraintEnd_toEndOf="@id/base_game_button"/>

    <Button
        android:id="@+id/skip_onboarding_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip"
        android:textAppearance="?textBodyTitle"
        android:textColor="?defaultTextColor"
        app:layout_constraintBottom_toBottomOf="@id/royal_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/royal_game_button" />

</androidx.constraintlayout.widget.ConstraintLayout>